v 1.0.3 2021-03-08
- updated register modules
- updated telekom modules
v 1.0.4 2021-04-10
- review functions for documents
- remove SMSCode from "AddCard" function
- change variables from DateTime to string
- fixed name of DeactiveAutoPayment function
- changed paymentTypeList response data type
- removed userId from PaymentSystemLog function
- changed name of MobileExpressPayBillParameters as MobilexpressPayBillParameters in CustomerServiceMobilexpressPayBillRequest class
- changed data type of ValueNamePair from IEnumarable to array
- changed data type of ExternalTariffList from IEnumarable to array in CustomerServiceExternalTariffResponse
- changed data type of GetCustomerFilesResponse from IEnumarable to array
- changed data type from IEnumarable to array
v 1.0.5 2021-04-29
- changed 'SupportStatus' response model
v 1.0.6 2021-05-02
- updated masterISS modules
v 1.0.6.1 2021-05-02 (Partner web service changelog)
- added GetPartnerSubscriptionList function
- added attachment functions (save , get)
v 1.0.7 2021-05-11
- added AppLog function for MobileAppLog
- changed data type of GetCustomerSupportListResponse from IEnumarable to array
- changed request type of SupportList
v 1.0.7.1 2021-05-21 (Partner web service changelog)
- added new request parameter(SubscriberNo) to GetPartnerClientAttachments
v 1.0.7.2 2021-05-22 (Partner web service changelog)
- added new function 'GetSubscriptionState'
v 2.0.0 2021-05-26 (AgentWebService)
- added new web service for agents
v 2.1.0 2021-05-30 (New branch for AgentWebService)
---- Agent Web Service Branch Version History ----
v 2.1.1 2021-05-31
- changed get bills and pay bills functions for pre paid subscriptions
v 2.2 2021-06-05
- added new functions
- [AddWorkOrder]
- [ServiceOperators]
- [GetCustomerTasks]
- [GetAgentClientForms]
- [SaveClientAttachment]
- [GetBillReceipt]
- [GetRelatedPayments]
v 2.2.1 2021-06-07
- fixed culture for bill receipt
v 2.2.2 2021-06-08
- added search filter